# MuAgene

./: .gitignore  AGENT.md  README.md  muagene.agents.yaml
Execution-MuAgent/: .gitignore  AGENT.md  README.md  pyproject.toml
Execution-MuAgent/agent/: interaction_flow.md  system_prompt.md  tools.md
Execution-MuAgent/execution_muagent/: __init__.py  capabilities.py  cli.py  environment.py  machine.py  monitor.py
Execution-MuAgent/scripts/: bootstrap.sh
Execution-MuAgent/tests/: test_environment.py  test_execute_spec_preflight.py  test_gpu_render.py  test_gpu_supervision.py  test_harness_consistency.py  test_machine.py  test_monitor.py
Processing-MuAgent/: .gitignore  AGENT.md  README.md  pma_runner-991791.out  pma_runner-991905.out  pma_runner-991915.out  pma_runner-992486.out  pma_runner-992488.out  pyproject.toml  slurm-1015170.out
Processing-MuAgent/agent/: interaction_flow.md  system_prompt.md  tools.md
Processing-MuAgent/config/: run.example.yaml
Processing-MuAgent/executor/: __init__.py  atac_latent.py  cleanup.py  cli.py  cluster_exit.py  compute.py  context.py  context_mapper.py  defaults.py  doc_ingest.py  doi_fetch.py  figures.py  gates.py  hashing.py  hpc.py  io.py  layout.py  log.py  manifest.py  md_tables.py  notebook_builder.py  pairing.py  pipeline.py  plan_assembler.py  plan_review.py  provenance.py  qc_explore.py  qc_summary.py  qc_tables.py  reporting.py  resolution_compare.py  revision.py  run_paths.py  snakemake_runner.py  specs.py  stage_progress.py
Processing-MuAgent/scripts/: apply_nfs_patch.py  build_and_push_gpu_image.sh  launch_runner.sh  runner.pbs  runner.slurm  verify_gpu_scrublet.py
Processing-MuAgent/tests/: test_approval_seeding.py  test_cli_status.py  test_compute.py  test_execution_mode_gate.py  test_finish_cleanup.py  test_fragment_prep.py  test_gpu_config.py  test_gpu_resources_contract.py  test_gpu_submit_scripts.py  test_harness_consistency.py  test_head_job_spec.py  test_hpc.py  test_hpc_status.py  test_imports_cover_stages.py  test_input_refs.py  test_launch_runner.py  test_log_archive.py  test_no_import_shadowing.py  test_pct_mt_flat_cap.py  test_peaks_prep.py  test_pipeline.py  test_plan_appendix_order.py  test_plan_intro_persist.py  test_plan_overlay.py  test_qc_cleanup.py  test_qc_explore.py  test_qc_filter_stats.py  test_qc_handoff.py  test_qc_invalidation.py  test_qc_review_figures.py  test_qc_summary_final_paths.py  test_qc_tables.py  test_qc_threshold_figure.py  test_qc_threshold_override.py  test_regenerate_locks_guard.py  test_s0_pairing_confirmation.py  test_s1a_marker_genes.py  test_s1a_missing_ingest.py  test_s2_acquire_atac.py  (+7 more)
processing-MuAgent/: .gitignore  README.md  RESUME.md  pyproject.toml
(+172 files in other folders)
