[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Processing-MuAgent"
version = "0.1.0"
description = "Multiome (scRNA + scATAC) preprocessing subagent: QC -> PCA (RNA) + neighbor graph -> clustering -> UMAP. Hard stop."
requires-python = ">=3.10,<3.13"
dependencies = [
    "scanpy>=1.10",
    "anndata>=0.10",
    "mudata>=0.2",
    "muon>=0.1",
    "snapatac2>=2.6",
    "scrublet>=0.2",
    "leidenalg>=0.10",
    "umap-learn>=0.5",
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "pyarrow>=14",
    "pyyaml>=6",
    "requests>=2.31",
    "click>=8.1",
    "jinja2>=3.1",
    # >=8: the workflow profiles drive the plugin-based `--executor cluster-generic`
    # interface, introduced in Snakemake 8 (matches workflow/envs/processing.yaml).
    "snakemake>=8",
]

[project.optional-dependencies]
# Dev-only: conda-lock regenerates workflow/envs/processing.linux-64.lock from
# processing.yaml (`Processing-MuAgent regenerate-locks`). NOT a runtime dependency —
# it must not be pulled into the science env.
dev = ["conda-lock>=2.5"]

[project.scripts]
Processing-MuAgent = "executor.cli:main"
executor = "executor.cli:main"

[tool.setuptools.packages.find]
include = ["executor*"]
