[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "processing-muagent"
version = "0.1.0"
description = "Multiome (scRNA + scATAC) preprocessing subagent: QC -> dim reduction -> clustering -> UMAP. Hard stop."
requires-python = ">=3.10,<3.13"
dependencies = [
    "scanpy>=1.10",
    "anndata>=0.10",
    "mudata>=0.2",
    "muon>=0.1",
    "snapatac2>=2.6",
    "scrublet>=0.2",
    "leidenalg>=0.10",
    "umap-learn>=0.5",
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "pyarrow>=14",
    "pyyaml>=6",
    "requests>=2.31",
    "click>=8.1",
    "jinja2>=3.1",
    "snakemake>=7.32",
]

[project.scripts]
processing-muagent = "executor.cli:main"

[tool.setuptools.packages.find]
include = ["executor*"]
